--- a/css/style.css
+++ b/css/style.css
@@ -4,6 +4,7 @@
 }
 
 * {
+    overflow-y: hidden;
     margin: 0%;
     padding: 0%;
     font-family: 'Roboto', sans-serif;
@@ -161,7 +162,7 @@ header {
 .nav {
     display: flex;
     flex-direction: row;
-    justify-content: center;
+
 }
 
 .nav ul {
