--- a/css/style.css
+++ b/css/style.css
@@ -13,6 +13,9 @@
 a {
     text-decoration: none;
 }
+li {
+    list-style: none;
+}
 
 main {
     margin-top: 3vh;
@@ -170,9 +173,8 @@ header {
 nav {
     display: flex;
     flex-direction: row;
-    gap: 60vw;
+    margin-left: 5vw;
     padding-top: 1vh;
-    justify-content: center;
 
 }
 
@@ -180,7 +182,6 @@ nav {
     border-top: #000 1px solid;
     border-bottom: #000 1px solid;
     padding-bottom: 8vh;
-    padding-top: 4vh;
     margin-left: 3vh;
     margin-right: 3vh;
     border-radius: 10px;
@@ -208,8 +209,38 @@ nav {
     display : none;
 }
 
+.containerNavMain {
+    display: flex;
+}
 
+.containerWorld {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+}
 
+.containerRowWorld {
+    display: flex;
+    flex-direction: row;
+    gap: 10vw;
+}
+
+.rowWorld {
+    display: flex;
+}
+
+.rowWorld a {
+    width: fit-content;
+    height: fit-content;
+
+}
+
+.rowWorld img {
+    width: 25vw;
+    height: auto;
+    max-width: fit-content;
+
+}
 
 
 /* FORM */
