--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,11 @@
     padding: 0%;
     font-family: 'Roboto', sans-serif;
     font-size: 1.8vh;
+
+}
+button {
     background-color: white;
 }
-
 a {
     text-decoration: none;
 }
@@ -439,7 +441,26 @@ nav {
     text-align: center;
     word-wrap: break-word;
 }
+/* Fin page world */
 
+/* WORKSPACE 
+*/ 
+
+.containerHeader {
+    display: flex;
+    flex-direction: column;
+    background-color: red;
+    width: 100%;
+
+}
+
+.containerRoot {
+    color: black;
+}
+
+/* 
+FIN WORKSPACE
+*/
 
 /* FORM */
 
