--- a/css/style.css
+++ b/css/style.css
@@ -211,10 +211,7 @@ nav {
     
 }
 
-/* burger menu */
 
-
-/* burger menu */
 
 
 
@@ -446,17 +443,177 @@ nav {
 /* WORKSPACE 
 */ 
 
-.containerHeader {
+
+
+/* SIDEBARE WORKSPACE*/
+
+.containerSidebar {
+    position: fixed;
+    top: 0;
+    right: 92%;
+    height: 100%;
+
+}
+
+.containerSidebar button {
+    position: fixed;
+    top: 50%;
+    width : 10vw;
+    height: 10%;
+
+}
+
+.containerHeaderWorkspace {
     display: flex;
     flex-direction: column;
-    background-color: red;
+    background-color: black;
+    color: white;
     width: 100%;
+    align-items: center;
+
+}
+.rootChanger {
+    display: flex;
+    flex-direction: column;
+    margin-top: 2vh;
+    align-items: center;
+    margin-left: 60%;
+    overflow: hidden;
+    margin-bottom: 2vh;
+
+}
+.rootChanger button {
+    width: 35vw;
+
+
 
 }
 
-.containerRoot {
-    color: black;
+.rootChanger ul {
+    border: white 1px solid;
+    padding-left: 1vw;
+    padding-top: 1vh;
+    padding-bottom: 1vh;
+    padding-right: 3vw;
+    border-radius: 20px;
 }
+.rootChanger li {
+    margin-top: 1vh;
+}
+.rootChanger a {
+    color: white;
+}
+
+.listNewElement {
+    border: #000 1px solid;
+    border-radius: 20px;
+    padding: 1vh;
+    margin-bottom: 2vh;
+    text-align: center;
+}
+
+.listNewElement li {
+    margin-top: 0.8vh;
+}
+
+.listNewElement a {
+    color: #000;
+}
+
+.treeCollapse {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+}
+
+.treeCollapse img {
+    max-width: 50px;
+    max-height: 50px;
+    min-height: 50px;
+    min-width: 50px;
+    border-radius: 50px;
+    margin-left: 2vw;
+}
+
+.treeCollapse li {
+    display: flex;
+    flex-direction: column;
+    
+}
+
+.treeElement {
+}
+
+.treeElement a {
+    display: flex;
+    align-items: center;
+    margin-top: 1vh;
+   
+    
+}
+
+.treeElement p {
+    overflow: hidden;
+    width: 80%;
+
+}
+
+
+
+.containerMain {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    padding-right: 1vw;
+    align-items: end;
+    height: 100%;
+    min-height: 100vh;
+   
+
+}
+
+.containerTree{
+    display: flex;
+    flex-direction: column;
+    width: 75%;
+    margin-top: 2vh;
+    border: #000 solid 1px;
+    border-radius: 20px;
+    padding: 2vh;
+    min-height: 80vh;
+    justify-content: flex-start;
+}
+
+.containerTreeTitle {
+    width: 80%;
+}
+
+#searchBar {
+    width: 100%;
+    padding-left: 1vh;
+}
+
+.containerRowBtnWorkspace {
+display: flex;
+flex-direction: column;
+align-items: flex-end;
+border-bottom: 1px solid black;
+padding-bottom: 1vh;
+margin-bottom: 2vh;
+}
+
+.containerRowBtnWorkspace button {
+    width: 26%;
+    margin-bottom: 2vh;;
+    margin-right: 2.2vw;
+}
+.containerFilesTree {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+
 
 /* 
 FIN WORKSPACE
@@ -782,6 +939,9 @@ fieldset button {
 
 }
 
+
+/* burger menu */
+
 .collapseHide {
     display: flex;
     flex-direction: column;
@@ -790,6 +950,9 @@ fieldset button {
 .hide {
     display : none;
 }
+
+/* burger menu */
+
 
 /** FOOTER 
 */
